# django-project

./: README.md  create_data.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  utils.py
ads/: admin.py  models.py  permissions.py  serializer.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selections.py  0004_category_slug.py  0005_alter_category_slug.py  0006_auto_20220908_1552.py  0007_auto_20220908_1555.py
ads/urls/: urls_ad.py  urls_cat.py  urls_select.py
data_json/: ad.json
homework/: settings.py  urls.py
tests/: contest.py  fixtures.py  fixxtures.py
tests/ads/: ads_detail_test.py  test_create_ad.py  test_get_list_ad.py
tests/selections/: selection_create_test.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_age.py  0004_user_birth_date.py
